--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-toggle-display": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
