--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
+    "dotenv": "^4.0.0",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
